--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -12,8 +13,16 @@
   },
   "author": "Alejandro Giraldo",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/steven4389/formulario_nodejs_angular/issues"
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "connect-multiparty": "^2.2.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mysql": "^2.14.1",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.38.0"
   },
-  "homepage": "https://github.com/steven4389/formulario_nodejs_angular#readme"
+  "devDependencies": {
+    "nodemon": "^1.18.3"
+  }
 }
